--- a/src/template/head.pug
+++ b/src/template/head.pug
@@ -8,5 +8,6 @@
   <title>Visavia</title>
   <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="slick/slick.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
