--- a/visavia/css/main.css
+++ b/visavia/css/main.css
@@ -2094,6 +2094,96 @@ button {
   filter: drop-shadow(0 1px 0 #675fd5);
 }
 
+.slider {
+  margin-bottom: 50px;
+}
+
+.reviews {
+  margin-bottom: 112px;
+}
+
+.reviews h3 {
+  font: 600 24px/26px 'Montserrat', sans-serif;
+  color: #59586e;
+  margin-bottom: 20px;
+}
+
+.reviews p {
+  margin-bottom: 25px;
+  color: #59586e;
+}
+
+.reviews__holder {
+  position: relative;
+  background: #fff;
+  margin-top: 67px;
+  border-radius: 0 0 20px 20px;
+  padding: 32px 32px 32px 32px;
+}
+
+.reviews__holder:before {
+  content: '';
+  position: absolute;
+  top: -67px;
+  height: 135px;
+  width: 100%;
+  left: 0;
+  border-radius: 50%;
+  background: #fff;
+}
+
+.reviews__photo {
+  border-radius: 20px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.reviews__photo img {
+  width: 100%;
+  max-width: 384px;
+  display: inline-block !important;
+  vertical-align: top;
+}
+
+.reviews .icon-quote {
+  width: 77px;
+  height: 64px;
+  fill: #d7d4ec;
+  margin-bottom: 24px;
+}
+
+.reviews__read-more {
+  display: inline-block;
+  vertical-align: top;
+  border-bottom: 1px dashed;
+  color: #272641;
+  margin-bottom: 40px;
+}
+
+.reviews__read-more:hover {
+  color: #272641;
+}
+
+.reviews__flag {
+  display: inline-block;
+  vertical-align: top;
+  width: 103px;
+  height: 103px;
+  border-radius: 50%;
+  padding: 4px;
+  background: #d9d6ff;
+}
+
+.reviews__name {
+  margin-bottom: 15px;
+  color: #59586e;
+}
+
+.reviews__country {
+  font-weight: 600;
+  color: #59586e;
+}
+
 .footer {
   -ms-flex: 0 0 auto;
       flex: 0 0 auto;
@@ -2350,6 +2440,15 @@ button {
 
   .faq__manager {
     margin-bottom: 48px;
+  }
+
+  .reviews__holder {
+    padding: 32px 32px 32px 64px;
+  }
+
+  .reviews__photo {
+    text-align: right;
+    margin-bottom: 0;
   }
 }
 
