--- a/visavia/css/main.css
+++ b/visavia/css/main.css
@@ -709,12 +709,8 @@ button {
 }
 
 .caption_footered {
-  padding-bottom: 0;
-  border-radius: 0;
-}
-
-.caption_footered {
   padding-bottom: 30px;
+  border-radius: 0;
 }
 
 .caption_clouded:before,
@@ -760,6 +756,15 @@ button {
   border-radius: 0 0 10px 10px;
 }
 
+.caption_white {
+  padding-bottom: 82px;
+}
+
+.caption_white .caption__holder {
+  background: #fff;
+  border-radius: 0 0 40px 40px;
+}
+
 .caption_footered .caption__holder {
   padding-bottom: 0;
   border-radius: 0;
@@ -794,6 +799,28 @@ button {
   border-radius: 10px 10px 0 0;
 }
 
+.caption_white .caption__top {
+  background: url(../img/pattern3.png);
+}
+
+.caption_white .caption__top:before,
+.caption_white .caption__top:after {
+  background: #fff;
+}
+
+.caption_white .caption__top:before {
+  border-radius: 40px 40px 0 0;
+}
+
+.caption_white .caption__top:after {
+  border-radius: 40px 40px 0 0;
+}
+
+.caption__content {
+  position: relative;
+  z-index: 2;
+}
+
 .caption__content b {
   display: block;
   text-align: center;
@@ -810,6 +837,10 @@ button {
 
 .caption__content ul li {
   margin-bottom: 15px;
+}
+
+.caption_white .caption__content {
+  margin-bottom: -25px;
 }
 
 .caption__bottom {
@@ -837,6 +868,28 @@ button {
 
 .caption__bottom:after {
   right: -30px;
+}
+
+.caption_white .caption__bottom {
+  background: #fff;
+  height: 82px;
+  left: 75px;
+  right: 75px;
+}
+
+.caption_white .caption__bottom:before,
+.caption_white .caption__bottom:after {
+  width: 75px;
+  height: 82px;
+  background: url(../img/angle2.png) no-repeat;
+}
+
+.caption_white .caption__bottom:before {
+  left: -75px;
+}
+
+.caption_white .caption__bottom:after {
+  right: -75px;
 }
 
 .ham-menu {
@@ -2152,7 +2205,7 @@ button {
 }
 
 .reviews {
-  margin-bottom: 112px;
+  margin-bottom: 70px;
 }
 
 .reviews h3 {
@@ -2250,15 +2303,152 @@ button {
   color: #59586e;
 }
 
-.find-us {
-  min-height: 300px;
-  background: url(../img/find-us/back.png);
-  background-position: center bottom;
+.socials {
+  list-style: none;
+  padding-left: 0;
+  display: -ms-flexbox;
+  display: flex;
 }
 
-.footer {
-  -ms-flex: 0 0 auto;
-      flex: 0 0 auto;
+.socials li {
+  width: 50px;
+  height: 50px;
+  border-radius: 14px;
+  margin-right: 15px;
+}
+
+.socials li a {
+  background-size: cover;
+  display: block;
+  line-height: 50px;
+}
+
+.socials__vk a {
+  background: url(../img/socials/vk.png) no-repeat;
+}
+
+.socials__ig a {
+  background: url(../img/socials/ig.png) no-repeat;
+}
+
+.find-us {
+  padding: 30px 0 125px 0;
+  background: url(../img/find-us/back.png) no-repeat;
+  background-position: center bottom;
+  position: relative;
+}
+
+.find-us:before {
+  content: '';
+  position: absolute;
+  height: 100px;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  background: linear-gradient(180deg, #f2f4fc 0%, rgba(242, 244, 252, 0) 100%);
+}
+
+.find-us__holder {
+  position: relative;
+  z-index: 2;
+}
+
+.find-us__content {
+  padding-top: 30px;
+}
+
+.find-us__subtitle {
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 600;
+  color: #59586e;
+  margin-bottom: 10px;
+}
+
+.find-us__text {
+  font-size: 20px;
+  line-height: 28px;
+  color: #59586e;
+  margin-bottom: 32px;
+}
+
+.find-us__text span {
+  display: block;
+}
+
+.find-us__phone {
+  font-size: 24px;
+  line-height: 28px;
+  color: #59586e;
+  font-weight: 600;
+  margin-bottom: 35px;
+}
+
+.find-us__form {
+  max-width: 450px;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.find-us__form .caption__holder {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.modal {
+  padding-right: 0 !important;
+}
+
+.modal-body {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.modal-body .consult-form {
+  padding-top: 20px;
+}
+
+.modal-body .caption__holder {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.modal-body .close {
+  color: transparent;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  opacity: 1;
+  top: 0;
+  right: 8px;
+}
+
+.modal-body .close:before,
+.modal-body .close:after {
+  content: '';
+  position: absolute;
+  background: #272641;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.modal-body .close:before {
+  width: 20px;
+  height: 2px;
+  margin: auto 0;
+}
+
+.modal-body .close:after {
+  width: 2px;
+  height: 20px;
+  margin: 0 auto;
+}
+
+.modal-body .custom-control {
+  padding-left: 20px;
 }
 
 @keyframes mouse-scroll {
@@ -2392,6 +2582,24 @@ button {
   .faq-list__content .btn__holder {
     padding-left: 67px;
     padding-right: 67px;
+  }
+
+  .find-us__form .caption__holder {
+    padding-left: 43px;
+    padding-right: 43px;
+  }
+
+  .modal-body .caption__holder {
+    padding-left: 43px;
+    padding-right: 43px;
+  }
+
+  .modal-body .close {
+    right: -15px;
+  }
+
+  .modal-body .custom-control {
+    padding-left: 0;
   }
 }
 
@@ -2624,6 +2832,10 @@ button {
     height: 708px;
     margin-left: -250px;
   }
+
+  .find-us__holder {
+    padding: 0 0 0 100px;
+  }
 }
 
 @media (min-width: 1280px) {
@@ -2672,6 +2884,10 @@ button {
 
   .reviews__holder {
     padding: 32px 32px 32px 64px;
+  }
+
+  .find-us {
+    background-size: cover;
   }
 }
 
